<resources>
    <string name="lbl_take_another">Take another</string>
    <string name="lbl_camera_unavailable">Camera is not available (in use or does not exist).\nPlease close applications, that may use camera.
</string>
    <string name="action_share">Share</string>
    <string name="drawer_item1">Feed wall opened 1</string>
    <string name="drawer_item2">Feed wall opened 2</string>
    <string name="drawer_item3">Image post no edit</string>
    <string name="drawer_item4">Camera Screen</string>

    <string name="app_name">ClearSite</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Repeat password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot password</string>

    <string name="no_account">Don’t have an account? </string>
    <string name="register_now">Register</string>
    <string name="register_here">Your account will connect to the following email</string>
    <string name="create_password">Create a password to complete the registration process</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="Company_title">Company name</string>
    <string name="Company_name">Company name</string>
    <string name="phone">Mobile phone number</string>
    <string name="phone1">Phone number 1</string>
    <string name="phone2">Phone number 2</string>
    <string name="phone3">Phone number 3</string>
    <string name="phone4">Phone number 4</string>
    <string name="phone5">Phone number 5</string>
    <string name="locale">Locale</string>
    <string name="phone_optional">Another phone (Optional)</string>
    <string name="fax">Fax number (Optional)</string>
    <string name="can_edit">Can edit</string>
    <string name="term">By clicking "Create account" you agree to the Terms &amp; Conditions</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_name_validation">Please enter first name</string>
    <string name="last_name_validation">Please enter last name</string>
    <string name="company_name_validation">Please enter company name</string>
    <string name="email_validation">Please enter email address</string>
    <string name="enter_valid_emal">Please enter a valid email address</string>
    <string name="email_already_exists">The email address you entered is already registered to the system</string>
    <string name="password_validation">Please enter a password</string>
    <string name="confirm_password_validation">Please confirm password</string>
    <string name="password_mismatch">The passwords you entered don’t match</string>
    <string name="phone_number_validation">Please enter mobile phone number</string>
    <string name="fax_validation">Please enter fax number</string>
    <string name="name">Name</string>
    <string name="log_out">Log Out</string>
    <string name="try_later">Please try again later</string>
    <string name="profile_loading">Loading profile...</string>
    <string name="register_message">Registering please wait...</string>
    <string name="login_message">Logging in...</string>
    <string name="profile_loading_error">Oops something went wrong while loading profile</string>
    <string name="starts_activity">Started activity</string>
    <string name="received">Received</string>

    <string name="connect">Connect</string>
    <string name="confirm">Confirm code</string>
    <string name="get_role_error">Oops something went wrong while loading roles</string>
    <string name="get_role_message">Please Wait..</string>
    <string name="loading_roles">Loading roles...</string>
    <string name="invitation_activity">Invitation</string>
    <string name="play">Play</string>
    <string name="skip">Skip</string>

    <string name="sign_in_error">Incorrect email address or password</string>
    <string name="title_activity_calender_location">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feed_wall_activty">Feed Wall</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- fragment new calender -->

    <string name="create_log_title">Create New Log</string>
    <string name="log_title">Log title</string>
    <string name="choose_role">Choose role</string>
    <string name="add_contact">Add contacts</string>
    <string name="choose_address">Choose address (Optional)</string>
    <string name="choose_date">Choose date for log start</string>
    <string name="have_invitation_code">I have an invitation code</string>
    <string name="explain_invitation">What is an invitation code?</string>

    <string name="choose_location_title">Choose location</string>
    <string name="action_search">Search</string>
    <string name="action_calender">Calender</string>

    <string name="post_number"> Post num </string>
    <string name="materials_and_workers">Materials &amp; workers</string>
    <string name="add_content">Add content</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <string name="note">Note</string>
    <string name="comments">Comments</string>
    <string name="quality_control">Quality control</string>
    <string name="crew">Crew</string>
    <string name="raw_materials">Raw materials</string>
    <string name="tools">Tools</string>
    <string name="add_note">Add Note</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="septemeber">September</string>
    <string name="october">October</string>
    <string name="november">Novemeber</string>
    <string name="december">December</string>

    <string name="enter_a_comment">Enter a comment</string>
    <string name="note_title">Note</string>
    <string name="error">Oops something went wrong...</string>
    <string name="network_error">No network access</string>
    <string name="post_title">New post</string>
    <string name="log_entry_delete_message">The note was deleted</string>

    <string name="receive_or_edit">Receive material/Edit order</string>
    <string name="material_title">Raw materials</string>
    <string name="add_raw_material">Add raw materials</string>
    <string name="select_vendor">Select vendor</string>
    <string name="material_description">Material description</string>
    <string name="quantity_type">Quantity type</string>
    <string name="quantity_description">Concrete description</string>
    <string name="type">Type</string>
    <string name="finish_concrete">Finish concrete casting</string>
    <string name="receive_order">Receive order</string>

    <string name="crews">Crews</string>
    <string name="active_crews">Active crews</string>
    <string name="other_crews">Other crews</string>
    <string name="regi">Regie</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="amount">Amount</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="daily">Daily</string>
    <string name="add_crew">Add Crew</string>
    <string name="contractor_name">Contractor name</string>
    <string name="active_tools">Active tools</string>
    <string name="other_tools">Other tools</string>
    <string name="info_text1">Use pinch to zoom in and out</string>
    <string name="info_text2">Long click on the image to set a marker</string>
    <string name="info_text3">For location illustration purpose only</string>
    <string name="help">Help</string>

    <string name="all">All</string>
    <string name="users">Users</string>
    <string name="activities">Activities</string>
    <string name="picture">Picture</string>
    <string name="show_location">Show location</string>

    <string name="qa_doc_title">QA ­ Documents</string>
    <string name="approved">Approved</string>
    <string name="in_progress">In progress</string>
    <string name="new_qa_doc">New</string>

    <string name="item_to_execute">Item to execute</string>
    <string name="plan">Plan</string>
    <string name="contractor">Contractor</string>
    <string name="item_id">Item ID</string>
    <string name="sign_title">Sign here to approve the  document</string>
    <string name="sign_and_approve">Sign and approve</string>
    <string name="make_digital_signature">Make a digital signature</string>

    <string name="add_from_other_Log">Add from other Log</string>
    <string name="contacts">Contacts</string>

    <string name="notification">Notifications</string>
    <string name="reminders">Reminders</string>
    <string name="add_log">Add log </string>
    <string name="current_log">Current log</string>
    <string name="management">Management</string>
    <string name="advisors">Advisors</string>
    <string name="contractors">Contractors</string>
    <string name="vendors">Vendors</string>
    <string name="daily_signature">Daily signature</string>

    <string name="enable_notification_sound">Enable notification sound</string>
    <string name="daily_report">Daily report </string>
    <string name="date">Date</string>

    <string name="today">Today</string>
    <string name="sounds">Sounds</string>
    <string name="select_log">Select log</string>
    <string name="session_expire">Your session has expired please Login</string>
    <string name="support">Support</string>
    <string name="profile_setting">Profile settings</string>
    <string name="video_guides">Video guides</string>
    <string name="type_request">Type request</string>
    <string name="send">Send</string>
    <string name="close_daily_view">Close daily view</string>
    <string name="no_log_entry">No log entries</string>
</resources>