<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_city"
    tools:context=".MainActivity">

    <include
        android:id="@+id/header"
        layout="@layout/action_bar" />

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/ten_dp"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/register_here"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/emailtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/ten_dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/create_password"
                    android:textColor="@color/links_text_color"
                    android:textSize="23sp" />

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sixty_dp"
                    android:layout_margin="@dimen/five_dp"
                    android:background="@drawable/bgedittext"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/twenty_dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_hint_color" />

                <EditText
                    android:id="@+id/user_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sixty_dp"
                    android:layout_margin="@dimen/five_dp"
                    android:background="@drawable/bgedittext"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/twenty_dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_hint_color" />

                <Button
                    android:id="@+id/register_now"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sixty_dp"
                    android:layout_margin="@dimen/five_dp"
                    android:background="@drawable/buttons_selector"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:padding="@dimen/ten_dp"
                    android:text="@string/connect"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="19sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>
